--- a/templates/register.html
+++ b/templates/register.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Student Registration Form</title>
+    <title>Register Student</title>
 </head>
 <body>
-    <h1>Register Student</h1>
+    <h2>Register Student</h2>
     <form method="post">
-    Name: <input type="text" name="name"><br><br>
-    Email: <input type="email" name="email"><br><br>
-    Phone: <input type="text" name="phone"><br><br>
-    Course: <input type="text" name="course"><br><br>
-    Address: <textarea name="address"></textarea><br><br>
-    Contact: <input type="text" name="contact"><br><br>
-    <button type="submit">Register</button>
+        <label>Name:</label><br><input type="text" name="name"><br>
+        <label>Email:</label><br><input type="email" name="email"><br>
+        <label>Phone:</label><br><input type="text" name="phone"><br>
+        <label>Course:</label><br><input type="text" name="course"><br>
+        <label>Address:</label><br><input type="text" name="address"><br>
+        <label>Contact:</label><br><input type="text" name="contact"><br>
+        <input type="submit" value="Register">
     </form>
 </body>
 </html>
